# color-output

./: Cargo.toml  README.md  readme.md
sh/: init.sh  push.sh  test.sh
src/: lib.rs
src/color/: blod.rs  cfg.rs  const.rs  enum.rs  fn.rs  impl.rs  mod.rs  struct.rs  test.rs  trait.rs  type.rs  utils.rs
src/macro/: cfg.rs  macro.rs  mod.rs  proc_macro.rs
src/output/: cfg.rs  fn.rs  impl.rs  mod.rs  output.rs  struct.rs  test.rs  type.rs
src/output_builder/: cfg.rs  impl.rs  mod.rs  struct.rs  test.rs  trait.rs  type.rs
src/output_list/: cfg.rs  fn.rs  impl.rs  mod.rs  output.rs  struct.rs  test.rs  type.rs
src/output_list_builder/: cfg.rs  impl.rs  mod.rs  struct.rs  test.rs  type.rs
src/task/: cfg.rs  enum.rs  impl.rs  mod.rs  struct.rs  test.rs  type.rs
src/text/: cfg.rs  impl.rs  mod.rs  struct.rs  test.rs  type.rs
src/utils/: cfg.rs  fn.rs  macro.rs  mod.rs  test.rs
tests/: mod.rs
tests/color/: fn.rs
tests/task/: fn.rs
tests/text/: fn.rs
tests/utils/: fn.rs
