[package]
name = "color-output"
version = "6.1.0"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = "An atomic output library based on Rust that supports output functionalities through functions, builders, and other methods. It allows customization of text and background colors."
keywords = ["output", "console", "log", "print", "color"]
repository = "https://github.com/ltpp-universe/color-output"
categories = ["command-line-interface", "development-tools", "visualization"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]
