[package]
name = "color-output"
version = "6.4.1"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = "An atomic output library based on Rust that supports output functionalities through functions, builders, and other methods. It allows customization of text and background colors."
keywords = ["output", "console", "log", "print", "color"]
repository = "https://github.com/ltpp-universe/color-output"
categories = ["command-line-interface", "development-tools", "visualization"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
hyperlane-time = "0.0.6"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"